--- a/index.html
+++ b/index.html
@@ -10,33 +10,23 @@
     <link rel="stylesheet" href="style./css/popinfo.css">
 
     <!-- JS, Popper.js, and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <!-- CSS only -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/75766025af.js" crossorigin="anonymous"></script>
 
 </head>
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <button style="outline: none; border: none;" class="navbar-toggler" type="button" data-toggle="collapse"
-        data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
-        aria-label="Toggle navigation" style="background:none; border:none">
+    <button style="outline: none; border: none;" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" style="background:none; border:none">
         <span class="navbar-toggler-icon"></span>
     </button>
 
 
-    <a class="navbar-brand " style="padding-left: 4rem; " href="index.html"> <img class="logo "
-            src="./images/logo.jfif " alt="logo " srcset=" ">
+    <a class="navbar-brand " style="padding-left: 4rem; " href="index.html"> <img class="logo " src="./images/logo.jfif " alt="logo " srcset=" ">
     </a>
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -58,8 +48,7 @@
             <li style="padding-top: .3rem;">
                 <div style="background-color: #b18b22; border-radius: 4px;">
                     <form class="form-inline ">
-                        <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search"
-                            aria-label="Search" style="border-radius: 2px;">
+                        <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search" aria-label="Search" style="border-radius: 2px;">
                         <i class="fas fa-search fa-1.9x" aria-hidden="true"></i>
                     </form>
                 </div>
@@ -170,7 +159,21 @@
                 </div>
             </div>
         </div>
+        <div class="row row-content align-items-left">
+            <div class="col col-sm order-sm-first col-md">
+                <div class="media">
+
+                    <div class="media-body">
+                        <h2 class="mt-0">Sultan Khan</h2>
+                        <h4>Executive Cheif (Tailor)</h4>
+                        <p> <i> "On Tailor online all staff have experienced and competative to work. We ensure high quality stitching and all our task completed in given time."</i> </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
+
 
     <!-- Our work -->
     <br>
@@ -179,8 +182,7 @@
     <div class="our_work ">
 
         <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
-                alt="Card image cap ">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
             <div class="card-body">
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
@@ -188,8 +190,7 @@
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
-                alt="Card image cap ">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
             <div class="card-body">
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
@@ -197,8 +198,7 @@
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
-                alt="Card image cap ">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
             <div class="card-body">
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
@@ -206,8 +206,7 @@
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
-                alt="Card image cap ">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
             <div class="card-body">
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
@@ -215,8 +214,7 @@
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
-                alt="Card image cap ">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
             <div class="card-body">
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
@@ -224,8 +222,7 @@
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
-                alt="Card image cap ">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
             <div class="card-body">
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
@@ -233,8 +230,7 @@
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
-                alt="Card image cap ">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
             <div class="card-body">
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
@@ -242,8 +238,7 @@
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
-                alt="Card image cap ">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
             <div class="card-body">
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
@@ -260,10 +255,10 @@
     <script src="./js/loading.js"></script>
     <script src="./js/popinfo.js"></script>
     <script>
-        $(document).ready(function () {
+        $(document).ready(function() {
             $('[data-toggle="tooltip"]').tooltip();
         });
-        $("#carouselButton").click(function () {
+        $("#carouselButton").click(function() {
             if ($("#carouselButton").children("span").hasClass('fa-pause')) {
                 $("#mycarousel").carousel('pause');
                 $("#carouselButton").children("span").removeClass('fa-pause');
@@ -277,7 +272,7 @@
         var modal = document.getElementById('id01');
 
         // When the user clicks anywhere outside of the modal, close it
-        window.onclick = function (event) {
+        window.onclick = function(event) {
             if (event.target == modal) {
                 modal.style.display = "none";
             }
@@ -306,10 +301,8 @@
         <br>
         <div class="col-lg-6 col-md-6 col-sm-12">
             <label>Find us here</label><br>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5029.414381286717!2d74.40751999999996!3d31.547018299999984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39190f8aa6801965%3A0xd4b98ebf429d2311!2sAl-Faisal%20Town%2C%20Lahore%2C%20Punjab%2C%20Pakistan!5e1!3m2!1sen!2s!4v1604678886811!5m2!1sen!2s"
-                width="300" height="150" frameborder="0" style="border:0; border-radius: .3rem; padding: .1rem;"
-                allowfullscreen="" aria-hidden=" false" tabindex="0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5029.414381286717!2d74.40751999999996!3d31.547018299999984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39190f8aa6801965%3A0xd4b98ebf429d2311!2sAl-Faisal%20Town%2C%20Lahore%2C%20Punjab%2C%20Pakistan!5e1!3m2!1sen!2s!4v1604678886811!5m2!1sen!2s"
+                width="300" height="150" frameborder="0" style="border:0; border-radius: .3rem; padding: .1rem;" allowfullscreen="" aria-hidden=" false" tabindex="0"></iframe>
 
         </div>
     </div>
